# sorting_algorithms

./: 0-bubble_sort.c  CMakeLists.txt  README.md  main.c  sort.h  utils.c
practice/foo/: package-lock.json  package.json
practice/foo/src/: bubbleSort.ts  main.ts  mergeTwoSortedArray.ts
tests/: test_bubble_sort.c
